# afflatus

./: .dockerignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app.yaml  docker-bake.hcl  import-ds-to-tigris.ipynb  junk.ipynb  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  poststart.sh
.github/workflows/: docker-bake.yml  ruff.yml
app/: chores.py
experiments/: pull-log.py
models/: dd_solo.py
static/css/: main.css  xess.css
static/js/: main.js
templates/: base.html
templates/pages/: index.html  search.html
templates/partials/: index.html  index_content.html  search.html
templates/partials/api/: search.html  search_empty.html
