[project]
name = "afflatus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-htmx>=0.4.0",
    "pixeltable>=0.5.0",
]

[tool.uv.sources]
pixeltable = { git = "https://github.com/pixeltable/pixeltable" }
