[project]
name = "afflatus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.41.0",
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-htmx>=0.4.0",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "openai>=2.8.1",
    "pixeltable==0.5.0",
    "pixeltable-yolox>=0.4.2",
    "pydantic>=2.12.4",
    "setuptools>=80.9.0",
    "torch>=2.9.1",
    "transformers>=4.57.2",
    "uuid7>=0.1.0",
]

# [tool.uv.sources]
# pixeltable = { git = "https://github.com/pixeltable/pixeltable" }

[tool.uv.extra-build-dependencies]
yolox = ["setuptools"]

[tool.uv.sources]
pixeltable = { git = "https://github.com/pixeltable/pixeltable" }
